# checking-engine-pplab

./: .env.example  .gitignore  pyproject.toml  requirements.txt  test_app.py  test_message_consumption.py  test_message_processing.py
docs/: backend_architecture.md  caldera_integration.md  db.md  mq_architecture.md
setup/db_setup/: 00_create_schema.sql  01_create_tables.sql  02_create_indexes.sql  03_create_extensions.sql  04_sample_data.sql  05_cleanup_full.sql  06_cleanup_data.sql  README.md  run_cleanup.sh  run_setup.sh  verify_setup.sh
setup/mq_setup/: .env.example  01_install_rabbitmq.sh  02_setup_vhost_users.sh  03_setup_exchanges_queues.sh  04_configure_limits_security.sh  05_final_verification.sh  06_interactive_purple_team_test.sh  README.md  cleanup_rabbitmq.sh  flush_all_queues.sh  rabbitmq_setup_report.txt
src/: README.md
src/checking_engine/: __init__.py  config.py  main.py
src/checking_engine/api/: __init__.py  deps.py
src/checking_engine/application/: __init__.py  message_service.py  result_service.py
src/checking_engine/core/: __init__.py  detection_engine.py  instruction_consumer.py  result_consumer.py  task_dispatcher.py
src/checking_engine/database/: __init__.py  connection.py
src/checking_engine/domain/: __init__.py  result_service.py  (+3 more)
src/tests/: README.md  test_operations_crud.py
tests/: README.md  test_caldera_publisher.py  test_detections_crud.py  test_executions_crud.py  test_operations_crud.py
tmp/: 4e97e699-93d7-4040-b5a3-2e906a58199e.yml  6469befa-748a-4b9c-a96d-f191fde47d89.yml  90c2efaa-8205-480d-8bb6-61d90dbaf81b.yml
(+49 files in other folders)
