[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "checking-engine"
version = "0.1.0"
description = "Purple Team Detection Engine for MITRE Caldera"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "asyncpg==0.29.0",
    "aio-pika==9.4.3",
    "pydantic==2.4.2",
    "python-dotenv==1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/checking_engine"] 